...
                          fontWeight: FontWeight.normal),
                    ),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('lastNameField'),
                    inputFormatters: [
                      FilteringTextInputFormatter.deny(RegExp("[0-9]"))
                    ],
                    obscureText: false,
                    onChanged: (val) => setState(() => lastName = val),
                    validator: (val) =>
...
                          fontWeight: FontWeight.normal),
                    ),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('firstNameField'),
                    inputFormatters: [
                      FilteringTextInputFormatter.deny(RegExp("[0-9]"))
                    ],
                    obscureText: false,
                    onChanged: (val) => setState(() => firstName = val),
                    validator: (val) =>
...
                          fontWeight: FontWeight.normal),
                    ),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('middleInitialField'),
                    inputFormatters: [
                      FilteringTextInputFormatter.deny(RegExp("[0-9]"))
                    ],
                    obscureText: false,
                    onChanged: (val) => setState(() => middleInitial = val),
                    validator: (val) => val.isEmpty
...
                            fontFamily: "ShipporiMincho",
                            fontWeight: FontWeight.normal)),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('addressField'),
                    obscureText: false,
                    onChanged: (val) => setState(() => address = val),
                    validator: (val) =>
                        val.isEmpty ? 'This field is required' : null),
                SizedBox(height: 15),
                Container(
...
                            fontFamily: "ShipporiMincho",
                            fontWeight: FontWeight.normal)),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('contactNumField'),
                    obscureText: false,
                    keyboardType: TextInputType.number,
                    inputFormatters: [
                      FilteringTextInputFormatter.allow(RegExp("[0-9]"))
                    ],
                    onChanged: (val) => setState(() => contactNo = val),
...
                            fontFamily: "ShipporiMincho",
                            fontWeight: FontWeight.normal)),
                  ]),
                ),
                SizedBox(height: 5),
                TextFormField(
                    key: Key('relationshipField'),
                    inputFormatters: [
                      FilteringTextInputFormatter.deny(RegExp("[0-9]"))
                    ],
                    obscureText: false,
                    onChanged: (val) => setState(() => relationship = val),
                    validator: (val) =>
...
                Container(
                  padding: EdgeInsets.only(right: 10.0),
                  child: Row(
                    mainAxisAlignment: MainAxisAlignment.end,
                    children: <Widget>[
                      IconButton(
                        key: Key('arrowBtn'),
                        icon: Icon(Icons.arrow_forward_sharp, size: 45),
                        onPressed: () {
                          if (_formKey.currentState.validate()) {
                            account.addEmergencyContact(EmergencyContact(
                                lastName: lastName,
                                firstName: firstName,
                                middleInitial: middleInitial,
                                address: address,
                                contactNumber: contactNo,
                                relationship: relationship));

                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) =>
...
