...
                      // ),
                    ),
                    SizedBox(height: 50.0),
                    SizedBox(
                        height: 60.0,
                        child: TextFormField(
                          key: Key('emailField'),
                          decoration: InputDecoration(hintText: 'Email'),
                          keyboardType: TextInputType.emailAddress,
                          obscureText: false,
                          validator: (val) =>
                              val.isEmpty ? 'This field is required' : null,
                          onChanged: (val) => setState(() => email = val),
...
                        height: 60.0,
                        child: Row(
                          children: [
                            Expanded(
                              flex: 9,
                              child: TextFormField(
                                key: Key('passwordField'),
                                decoration:
                                    InputDecoration(hintText: 'Password'),
                                keyboardType: TextInputType.visiblePassword,
                                obscureText: hidePassword,
                                validator: (val) => val.isEmpty
                                    ? 'This field is required'
...
                      child: Row(
                        mainAxisAlignment: MainAxisAlignment.center,
                        children: <Widget>[
                          SizedBox(
                            width: 150.0,
                            child: MaterialButton(
                                key: Key('loginButton'),
                                shape: RoundedRectangleBorder(
                                    borderRadius: BorderRadius.circular(30.0),
                                    side: BorderSide(color: Colors.black12)),
                                color: Colors.grey.withOpacity(0.5),
                                minWidth: MediaQuery.of(context).size.width,
                                padding:
                                    EdgeInsets.fromLTRB(18.0, 15.0, 18.0, 15.0),
                                onPressed: () async {
                                  if (_formKey.currentState.validate()) {
                                    setState(() => loading = true);
                                    dynamic result = await _auth
                                        .signInWithEmailAndPassword(
                                            email, password)
                                        .timeout(Duration(seconds: 120),
                                            onTimeout: () {
                                      timeout = true;
                                      return null;
                                    });

...
                                color: Colors.black87,
                                fontFamily: "ShipporiMincho",
                                fontWeight: FontWeight.normal),
                          ),
                          SizedBox(width: 5),
                          InkWell(
                            key: Key('signup'),
                            onTap: () {
                              Navigator.push(
                                  context,
                                  MaterialPageRoute(
                                      builder: (context) => SignupOption()));
                            },
...
