...

    return Scaffold(
      appBar: CustomAppBar(
        title: 'Doctor',
      ),
      body: SingleChildScrollView(
        key: Key('doctorDetailsSingleChildScrollView'),
        child: Column(
          children: [
            ClipOval(
              child: Container(
                padding: EdgeInsets.all(10),
                height: 250,
...
                width: double.infinity,
                height: 55.0,
                child: isDoctor
                    ? emptyWidget
                    : ElevatedButton(
                        child: Text(
                          '${requestExists ? 'Cancel Request' : 'Send Request'}',
                          style: TextStyle(
                              fontSize: 20.0,
                              fontFamily: "ShipporiMincho",
                              color: Colors.white),
                        ),
                        style: ElevatedButton.styleFrom(
...
                    });
                    Navigator.pop(context);
                    DatabaseService().sendRequest(
                        doctorId: doctor.uid,
                        patientId: widget.currentPatient.uid);
                  },
                  child: Text('Consent'), key: Key('ConsentBtn'),),
            ],
          );
        });
  }
}

...
